Change some topbar styles

--- a/css/main.sass
+++ b/css/main.sass
@@ -129,27 +129,29 @@ body
   width: 100%
   text-align: right
   line-height: 50px
-  color: #000
   border-bottom: 1px solid #C4C4C4
   .link-border
     display: inline-block
     border-bottom: 2px solid #A81010
-    font-weight: bold
+    font-family: Gotham-Bold, sans-serif !important
+    font-size: 13px
     color: #000 !important
   .text
-    padding: 0px 5px
+    margin-right: 15px
+    padding: 0px 10px
     font-weight: bold
-    height: 48px
+    height: 46px
     cursor: pointer
     color: #D5D5D5
     text-decoration: none
-    font-family: 'Open Sans', HelveticaNeue, 'Helvetica Neue', Helvetica, Arial, sans-serif
+    font-family:  Gotham-Book, Sans-serif
     font-size: 13px
     font-weight: 600
 
     &:hover
       color: #000
       border-bottom: none
+      font-size: 13px
       font-family: Gotham-ExtraLight
 
 .blog-header
