--- a/css/main.sass
+++ b/css/main.sass
@@ -23,8 +23,9 @@
 
 $rs: 16px
 
-$font-serif: Linux Libertine
+$font-serif: Gotham-Book, sans-serif
 $font-sans: Gotham-Book, sans-serif
+$font-bold: Gotham-Bold, sans-serif
 
 
 @mixin respond-to($breakpoint)
@@ -34,6 +35,12 @@ $font-sans: Gotham-Book, sans-serif
 // Only needed for syntax highlighting
 %vertical-rhythm
   margin-bottom: $rs
+
+
+
+::selection
+  background-color: #ed1c24 !important
+  color: #fff !important
 
 
 
@@ -260,6 +267,8 @@ body
       font-size: 14px
       color: #b3b3b1
       line-height: 30px
+      h1
+        font-family: $font-bold
       a
         color: #b3b3b1
         text-decoration: none
@@ -439,10 +448,10 @@ body
       text-overflow: ellipsis
   .post-content
     width: 100%
-    font-family: $font-serif
+    font-family: $font-sans
     color: #333
     h1, h2, h3
-      font-family: $font-sans
+      font-family: $font-bold
     h3, h4, h5, h6
       letter-spacing: -0.02em
       font-weight: 700
@@ -450,7 +459,7 @@ body
       font-size: 24px
       line-height: 1.3
       margin: 0
-      font-family: $font-sans
+      font-family: $font-bold
       margin-bottom: 4px
     h2, h1
       letter-spacing: -0.02em
@@ -463,17 +472,20 @@ body
     p
       font-weight: 400
       font-style: normal
-      font-size: 22px
+      font-size: 14px
       line-height: 30px
       margin: 0
-      padding-bottom: 30px
-      color: #333
+      padding-bottom: 17px
+      color: #000
       -webkit-hyphens: auto
       -moz-hyphens: auto
       hyphens: auto
     a
-      color: #333
-      text-decoration: underline
+      color: #b94040
+      text-decoration: none
+      &:hover
+        color: #b94040
+        font-weight: bold
     img
       max-width: 100%
       margin: 0 auto
@@ -493,8 +505,8 @@ body
       border: 0
       padding: 0
       display: block
-      width: 15%
-      margin: 30px auto
+      width: 100%
+      margin: 5px auto 20px auto
       border: 0px solid #ddd
       border-top: 1px solid #ddd
     blockquote
@@ -509,19 +521,23 @@ body
         margin-left: -26px
         padding-bottom: 3px
     ul, ol
-      padding: 0 0 30px
+      padding: 0 0 15px
       margin: 0
+      color: #000
+      ul
+        padding: 0 0 0px
       li
         padding: 0
         font-weight: 400
         font-style: normal
-        font-size: 23px
-        line-height: 30px
+        font-size: 14px
+        line-height: 26px
         margin-left: 30px
-        margin-bottom: 12px
+        margin-bottom: 0px
         padding-top: 2px
         p
-          padding: 0 0 golden-ratio(1rem,  1)
+          padding: 0 0 0
+          color: #000
     ol li
       list-style-type: decimal
   .bottom-teaser
