Change some details

--- a/css/main.sass
+++ b/css/main.sass
@@ -249,6 +249,7 @@ body
       font-style: normal
       display: block
       font-size: 28px
+      font-family: Gotham-Bold
       line-height: 1.1
       margin: 0 0
       a
@@ -260,9 +261,9 @@ body
       letter-spacing: -0.02em
       font-weight: 300
       font-style: normal
-      font-size: 20px
+      font-size: 16px
       line-height: 1.3
-      color: #666665
+      color: #000000
     .post-meta
       font-size: 14px
       color: #b3b3b1
