Update page content style

--- a/css/main.sass
+++ b/css/main.sass
@@ -80,17 +80,17 @@ body
       height: 182px
     background-size: cover
     background-repeat: no-repeat
-.content
+body
   code
     border: 0
     border-radius: 0
     background-color: transparent
     font-family: Gotham-Book
-.post-content
+.post-content, section
   code
     border: 1px solid #e8e8e8
     border-radius: 3px
-    background-color: #eef
+    background-color: #F8F8F8
     font-family: Gotham-Book
 .teaserimage
   height: 450px
@@ -270,7 +270,7 @@ body
   @include respond-to(800)
     padding: 0 $rs*2
   article
-    padding: 40px 0
+    padding: 20px 0
     border-bottom: 1px solid #f2f2f0
     &:last-child
       border-bottom: 0px
@@ -733,7 +733,7 @@ code
   font-size: 15px
   border: 1px solid #e8e8e8
   border-radius: 3px
-  background-color: #eef
+  background-color: #F8F8F8
 
 code
   padding: 1px 5px
