Reset activities changes.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,11 @@
   {% include head.html %}
 
   <body>
-    <div class="blog-topbar"><a class="text link-border" href="#top">XPLUSZ | BLOG</a><a class="text" href="#hidetitle">SHARING</a></div>
+    <div class="blog-topbar">
+        <a class="text link-border" href="#top">XPLUSZ | BLOG</a>
+        <a class="text" href="#hidetitle">SHARING</a>
+        <a class="text" href="#hidetitle">ACTIVITY</a>
+    </div>
     <a id="top"></a>
     {% include header.html %}
 
